feat: implement layout and navigation structure, integrate Supabase for data fetching, and enhance styling with Tailwind CSS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "Node16",
+    "moduleResolution": "node16",
+    "strict": true
+  },
+  "exclude": ["node_modules"]
 }
