--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/test-utils": "^3.17.2",
     "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/supabase": "^1.5.0",
+    "@tailwindcss/vite": "^4.1.4",
     "@unhead/vue": "^2.0.7",
+    "cookie": "^0.7.2",
     "eslint": "^9.24.0",
     "nuxt": "^3.16.2",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "resolutions": {
+    "cookie": "0.7.2"
   }
 }
